# susambil-project

./: CMakeLists.txt  README.md  Susambil_final_project_oop.pptx  main.cpp
src/core/: CpuInfo.cpp  CpuInfo.h  CpuReader.cpp  CpuReader.h  IDataReader.h  IRenderable.h  MonitorExceptions.h  ProcessInfo.cpp  ProcessInfo.h  ProcessList.cpp  ProcessList.h  ProcessReader.cpp  ProcessReader.h  SystemInfo.cpp  SystemInfo.h
src/gui/: AboutDialog.cpp  AboutDialog.h  CpuGraphWidget.cpp  CpuGraphWidget.h  MainWindow.cpp  MainWindow.h  ProcessTableModel.cpp  ProcessTableModel.h
src/utils/: Formatter.h  Logger.cpp  Logger.h  RingBuffer.h
